--- a/package.json
+++ b/package.json
@@ -33,12 +33,9 @@
     "cross-env": "^7.0.3"
   },
   "scripts": {
-    "start-front": "react-scripts start",
-    "start-server": "nodemon ./server/bin/www",
-    "build-front": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start": "npm run start-server",
+    "start": "node ./server/bin/www",
     "build": "react-scripts build"
   },
   "eslintConfig": {
